--- a/JS系列/作用域.md
+++ b/JS系列/作用域.md
@@ -1,10 +1,8 @@
-# Scope & Closures -- Scope
-
 ## 1. 作用域是什么
 
-作用域是一套规则，用于确定在何处以及如何查找变量（标识符）。
+:star: 作用域是一套规则，用于确定在何处以及如何查找变量（标识符）。
 
-#### :star: LHS 查询: 找到变量的容器本身，并对其赋值( 目标 )
+- #### LHS 查询: 找到变量的容器本身，并对其赋值( 目标 )
 
 ```js
 var a = 2;
@@ -16,7 +14,7 @@ var a = 2;
 
 2. a = 2 ; 会查询（LHS 查询）变量 a 并对其进行赋值。
 
-#### :star: RHS 查询: 获取变量的值( 源头 )
+- #### :star: RHS 查询: 获取变量的值( 源头 )
 
 ```js
 console.log(a);
@@ -25,7 +23,7 @@ foo(2);
 
 - LHS 和 RHS 查询都会在当前执行作用域中开始，如果有需要（也就是说它们没有找到所需的标识符），就会向上级作用域继续查找目标标识符，这样每次上升一级作用域（一层楼），最后抵达全局作用域（顶层），无论找到或没找到都将停止。
 
-- 不成功的 RHS 引用会导致抛出 ReferenceError 异常。不成功的 LHS 引用会导致自动隐式地创建一个**全局变量**（非严格模式下），该变量使用 LHS 引用的目标作为标识符，或者抛出 ReferenceError 异常（严格模式下）。
+- 不成功的 RHS 引用会导致抛出 ReferenceError 异常。不成功的 LHS 引用会导致自动隐式地创建一个 **`全局变量`**（非严格模式下），该变量使用 LHS 引用的目标作为标识符，或者抛出 ReferenceError 异常（严格模式下）。
 
   ```js
   var a = 2;
@@ -37,13 +35,13 @@ foo(2);
 
 ## 2. 词法作用域
 
-- 词法作用域意味着作用域是由书写代码时**函数声明的位置**来决定的。
+- 词法作用域意味着作用域是由书写代码时 **`函数声明的位置`** 来决定的。
 
 - JavaScript 中有两个机制可以“欺骗”词法作用域：eval(..) 和 with。
 
 1.  #### eval(...):
 
-    :point_right: 对一段包含一个或多个声明的“代码”字符串进行演算，并借此来<font color=ff0000>修改已经存在的词法作用域</font>（在运行时）
+    :point_right: 对一段包含一个或多个声明的“代码”字符串进行演算，并借此来`修改已经存在的词法作用域`（在运行时）
 
     ```js
     function foo(str, a) {
@@ -56,7 +54,7 @@ foo(2);
 
 2.  #### with:
 
-    :point_right: 通过将一个对象的引用当作作用域来处理，将对象的属性当作作用域中的标识符来处理，从而<font color=ff0000>创建了一个新的词法作用域</font>（在运行时）
+    :point_right: 通过将一个对象的引用当作作用域来处理，将对象的属性当作作用域中的标识符来处理，从而`创建了一个新的词法作用域`（在运行时）
 
     ```js
     function foo(obj) {
@@ -161,7 +159,7 @@ foo(2);
 
 ## 4. 提升 :sparkles::sparkles::sparkles:
 
-#### :star: 提升: 包括变量和函数在内的所有声明都会在任何代码被执行前首先被处理,这个过程就好像变量和函数声明从它们在代码中出现的位置被“移动”到了最上面。
+:star: 提升: 包括变量和函数在内的所有声明都会在任何代码被执行前首先被处理,这个过程就好像变量和函数声明从它们在代码中出现的位置被“移动”到了最上面。
 
 ```javascript
 console.log(a); //undefined
@@ -176,7 +174,7 @@ console.log(a);
 a = 2; // 赋值声明会被留在原地等待执行阶段
 ```
 
-- <font color=#ff0000>函数声明</font>会<font color=#ff0000>提升</font>，<font color=#ff0000>函数表达式</font>不会<font color=#ff0000>提升</font>。
+- `函数声明`会提升，`函数表达式`不会提升。
   ```javascript
   foo(); // TypeError: foo is not a function
   bar(); // 我是函数声明，我会提升
@@ -248,9 +246,9 @@ console.log(a);
 
 ## :books: 6. 动态作用域 ( JS 不具备动态作用域 )
 
-:star: 词法作用域: 在**定义**时确定。关注函数在何处 **<font color=ff0000>声明</font>。**
+:star: 词法作用域: 在 **`定义`** 时确定。关注函数在何处 **`声明`**
 
-:star: 动态作用域: 在**运行**时确定。关注函数从何处 **<font color=ff0000>调用</font>。**
+:star: 动态作用域: 在 **`运行`** 时确定。关注函数从何处 **`调用`**
 
 ```javascript
 function foo() {
@@ -264,7 +262,7 @@ var a = 2;
 bar(); // 2
 ```
 
-:point_right: bar( ) 执行时,foo( ) 中没有 a,向上找,找到全局的 a,因为 **JavaScript 并不具有动态作用域**，而词法作用域关注函数在何处声明，所以找到了 " var = 2 ",如果关注在何处调用，则会找到 bar( ) 中的 " var a = 3"。
+:point_right: bar( ) 执行时,foo( ) 中没有 a,向上找,找到全局的 a,因为 **`JavaScript 并不具有动态作用域`**，而词法作用域关注函数在何处声明，所以找到了 " var = 2 ",如果关注在何处调用，则会找到 bar( ) 中的 " var a = 3"。
 
 ## :books: 7. 词法 this ( 类似动态作用域用法 ) :sparkles::sparkles::sparkles:
 
@@ -303,7 +301,7 @@ setTimeout(obj.cool, 100); // not awesome
   ```
 
 - 解决方法 2: 箭头函数
-  :star: 箭头函数涉及 this 绑定时的行为和普通函数的行为完全不一致，用**当前的词法作用域**覆盖了 this 本来的值。
+  :star: 箭头函数涉及 this 绑定时的行为和普通函数的行为完全不一致，用 **`当前的词法作用域`**覆盖了 this 本来的值。
 
   ```javascript
   var obj = {
