--- a/JS系列/原型&原型链.md
+++ b/JS系列/原型&原型链.md
@@ -2,7 +2,7 @@
 
 ## 1. 原型 :sparkles::sparkles::sparkles:
 
-![prototype.png](../img/prototype.png)
+![prototype.png](img/prototype.png)
 
 ### 1.1 prototype
 
@@ -36,7 +36,7 @@ console.log(Foo.prototype);
 Foo.prototype.constructor === Foo; // true
 ```
 
-![prototype_constructor.png](../img/prototype_constructor.png)
+![prototype_constructor.png](img/prototype_constructor.png)
 
 ### 1.2 \_\_proto\_\_
 
@@ -51,7 +51,7 @@ Object.getPrototypeOf(foo) === Foo.prototype; // true
 foo.__proto__ === Foo.prototype; // true
 ```
 
-![prototype_proto.png](../img/prototype_proto.png)
+![prototype_proto.png](img/prototype_proto.png)
 
 :warning: **`.prototype`** 和 **`__proto__`** 区别
 
@@ -82,7 +82,7 @@ Object.defineProperty(Object.prototype, "__proto__", {
 
 :star:每个对象拥有一个原型对象，通过 `__proto__` 指针指向上一个原型 ，并从中**继承方法和属性**，同时原型对象也可能拥有原型，这样一层一层，最终指向 `null`，这种关系被称为**原型链**。根据定义，`null` 没有原型，并作为这个原型链中的最后一个环节。
 
-![prototype_chain.png](../img/prototype_chain.png)
+![prototype_chain.png](img/prototype_chain.png)
 
 :books: 查看 Foo 和 foo 的一些属性来理解:
 
@@ -102,8 +102,11 @@ console.log(Foo.prototype.prop1); // bar
 :star: 当试图得到一个对象的某个属性时，如果这个对象本身没有这个属性，那么会去它的 `__proto__` （即它的构造函数的 `prototype` ）中寻找 ，如寻找 `foo.a`,就会循着 **原型链**查找，直到最后一环 `null`。
 
 :point_right: 1. foo
+
 :point_right: 2. foo.\_\_proto\_\_( Foo.prototype )
+
 :point_right: 3. foo.\_\_proto\_\_.\_\_proto\_\_( window.Object.prototype )
+
 :point_right: 4. foo.\_\_proto\_\_.\_\_proto\_\_.\_\_proto\_\_( null )
 
 :warning: 在传统的 OOP 中，首先定义“类”，此后创建对象实例时，类中定义的所有属性和方法都被复制到实例中。在 JavaScript 中并不如此复制——而是在对象实例和它的构造器之间建立一个**链接**，之后通过上溯原型链，在构造器中找到这些属性和方法。
@@ -163,3 +166,5 @@ Foo.prototype.isPrototypeOf(a); // true;
 :point_right: `object instanceof AFunction` ：`object` 的原型链是针对 `AFunction.prototype` 进行检查的。
 
 :point_right: `prototypeObj.isPrototypeOf(object)` ： `object` 的原型链是针对 `prototypeObj` 本身，`prototypeObj`是否出现在 `object` 的原型链上。
+
+
