--- a/JS系列/闭包.md
+++ b/JS系列/闭包.md
@@ -1,5 +1,3 @@
-# Scope & Closures -- closures
-
 ## 作用域闭包 :sparkles::sparkles::sparkles:
 
 :star: 当函数可以**记住并访问所在的词法作用域时**，就产生了闭包，即使函数是在**当前词法作用域之外执行**。
@@ -16,9 +14,9 @@ var baz = foo();
 baz(); //2
 ```
 
-:point_right: bar( ) 在自己定义的 **<font color=ff0000>词法作用域以外的地方执行</font>**。
+:point_right: bar( ) 在自己定义的 **`词法作用域以外的地方执行`**。
 
-:point_right: 由于 bar( )所声明的位置，**<font color=ff0000>它拥有涵盖 foo( )内部作用域的闭包</font>**，使得该作用域能够一直存活，以供 bar( )在之后任何时间进行引用。
+:point_right: 由于 bar( )所声明的位置，**`它拥有涵盖 foo( )内部作用域的闭包`**，使得该作用域能够一直存活，以供 bar( )在之后任何时间进行引用。
 
 :point_right: bar( )依然持有对该作用域的引用，而这个引用就叫作闭包。
 
@@ -35,7 +33,7 @@ for (var i = 1; i <= 5; i++) {
 // (var i) 和 (..i*1000) 是一样的 i
 ```
 
-:point_right: **<font color=ff0000>延迟函数的回调会在循环结束时才执行</font>**，尽管循环中的五个函数是在各个迭代中分别定义的，但是它们都被封闭在一个共享的全局作用域中，因此实际上只有一个 i。我们需要更多的闭包作用域，特别是在循环的过程中每个迭代都需要一个闭包作用域。
+:point_right: **`延迟函数的回调会在循环结束时才执行`**，尽管循环中的五个函数是在各个迭代中分别定义的，但是它们都被封闭在一个共享的全局作用域中，因此实际上只有一个 i。我们需要更多的闭包作用域，特别是在循环的过程中每个迭代都需要一个闭包作用域。
 
 #### 改进 1:
 
@@ -65,7 +63,7 @@ for (var i = 1; i <= 5; i++) {
 
 #### 改进 3:
 
-:star::star:for 循环头部的 let 声明,变量在循环过程中不止被声明一次，**每次迭代都会声明**。随后的每个迭代都会使用上一个迭代结束时的值来初始化这个变量。
+:star::star:for 循环头部的 let 声明,变量在循环过程中不止被声明一次，**`每次迭代都会声明`**。随后的每个迭代都会使用上一个迭代结束时的值来初始化这个变量。
 
 ```javascript
 for (let i = 1; i <= 5; i++) {
@@ -128,7 +126,7 @@ var b = a.fun(1); // fun(1,0)         => console.log(0)         return fun(m,1)
 var c = b.fun(2); // fun(2,1)         => console.log(1)         return fun(m,2)
 ```
 
-:star: 无论通过何种手段将**内部函数**传递到**所在的词法作用域以外**，它都会持有对**原始定义作用域**的引用，无论在何处执行这个函数都会使用闭包。
+:star: 无论通过何种手段将 **`内部函数`** 传递到 **`所在的词法作用域以外`**，它都会持有对 **`原始定义作用域`** 的引用，无论在何处执行这个函数都会使用闭包。
 
 #### 例 3:
 
@@ -187,9 +185,9 @@ $.todo(); // Let's go shopping
 $.atos(); // 123
 ```
 
-- **<font color=ff0000>import :</font>** 将一个模块中的一个或多个 API 导入到当前作用域中，并分别绑定在一个变量上。
-- **<font color=ff0000>module :</font>** 将整个模块的 API 导入并绑定到一个变量上。
-- **<font color=ff0000>export :</font>** 将当前模块的一个标识符（变量、函数）导出为公共 API。这些操作可以在模块定义中根据需要使用任意多次。
+- **`import`** : 将一个模块中的一个或多个 API 导入到当前作用域中，并分别绑定在一个变量上。
+- **`module`** : 将整个模块的 API 导入并绑定到一个变量上。
+- **`export`** : 将当前模块的一个标识符（变量、函数）导出为公共 API。这些操作可以在模块定义中根据需要使用任意多次。
 
 bar.js :
 
