add prototype question

--- a/JS系列/原型&原型链.md
+++ b/JS系列/原型&原型链.md
@@ -99,6 +99,41 @@ console.log(Foo.prototype.prop2); // undefined
 console.log(Foo.prototype.prop1); // bar
 ```
 
+:books: 一道题目辅助理解:
+
+```js
+function Foo() {
+  getName = function () {
+    console.log(1);
+  };
+  return this;
+}
+
+Foo.getName = function () {
+  console.log(2);
+};
+
+Foo.prototype.getName = function () {
+  console.log(3);
+};
+
+var getName = function () {
+  console.log(4);
+};
+
+function getName() {
+  console.log(5);
+}
+
+Foo.getName(); // 2
+getName(); // 4, 函数声明会提升，函数表达式不会提升 => 所以 函数声明 在后,输出4
+Foo().getName(); // 1, Foo() 中 this 指向 window , Foo 中 重新定义 全局中的 getName, 输出 1
+getName(); // 同上, 1
+new Foo.getName(); // 2, Foo 对象上有getName, 直接输出2
+new Foo().getName(); // 3, 原型链继承, 输出3
+new new Foo().getName(); // 3
+```
+
 :star: 当试图得到一个对象的某个属性时，如果这个对象本身没有这个属性，那么会去它的 `__proto__` （即它的构造函数的 `prototype` ）中寻找 ，如寻找 `foo.a`,就会循着 **原型链**查找，直到最后一环 `null`。
 
 :point_right: 1. foo
@@ -166,5 +201,3 @@ Foo.prototype.isPrototypeOf(a); // true;
 :point_right: `object instanceof AFunction` ：`object` 的原型链是针对 `AFunction.prototype` 进行检查的。
 
 :point_right: `prototypeObj.isPrototypeOf(object)` ： `object` 的原型链是针对 `prototypeObj` 本身，`prototypeObj`是否出现在 `object` 的原型链上。
-
-
