add loop & total

--- a/JS系列/对象.md
+++ b/JS系列/对象.md
@@ -254,6 +254,12 @@ Object.defineProperty(
 
   3. `Object.getOwnPropertyName(..)` -> 所有属性
 
+  ```js
+  Object.getOwnPropertyName(obj1).forEach((key) => {
+    console.log(`${key} : ${obj1[key]}`);
+  });
+  ```
+
 - 数组遍历
 
   ```js
