--- a/面试考点/1119.md
+++ b/面试考点/1119.md
@@ -116,29 +116,87 @@ export default { inject: ["foo"] };
 </script>
 ```
 
-## 八、Vue 生命周期，更好的理解、每个周期可以做的事情
+## 八、父组件获取子组件数据和方法
 
-## 九、vue 父子组件渲染顺序
+```vue
+<div>
+  <child ref='childcomponent'></child>
+</div>
 
-https://blog.csdn.net/weixin_34344677/article/details/91381387
+this.$refs.childcomponent.xx
+```
+
+## 九、父组件监听子组件的生命周期
+
+```vue
+<div>
+  <child @hook:mounted='getsonmounted'></child>
+</div>
+```
+
+## 十、 修改对象属性，页面不重新渲染
+
+- 使用 `this.$set(对象名称, '属性名', '属性值')`
+
+- 使用 `this.$forceUpdate()` 方法可重新渲染页面
+
+## 九、Vue 生命周期，更好的理解、每个周期可以做的事情
+
+## 十、vue 父子组件渲染顺序
 
 父组件 beforeCreated ->父组件 created ->父组件 beforeMounted
 ->子组件 beforeCreated ->子组件 created ->子组件 beforeMounted
-->子组件 mounted -> 父组件 mounted。
+->子组件 mounted -> 父组件 mounted
 
-## 九、更好的 Vue 理解双向绑定
+## 十一、更好的 Vue 理解双向绑定
 
-## 十、Vue 路由守护钩子函数，拿到实例
+## 十二、Vue 路由守护钩子函数，拿到实例
 
-## 十一、Vuex action 参数理解
+## 十三、Vuex action 参数理解
 
-## 十二、Vue nextTick（） 使用场景
+## 十四、Vue nextTick（） 使用场景
 
-## 十三、keep-alive
+## 十五、keep-alive
+
+缓存不活动的组件实例，而不是销毁他们
+
+### 场景
+
+- 淘宝浏览到中间位置，点击购物车，返回时，需要还在中间位置。
+- 搜索结果，点击进入结果详情，返回时，显示搜索结果，而不是所有结果
+
+### 作用
+
+- 组件切换时，保留状态至缓存，防止重复渲染 DOM
+- 减少接口请求，减轻服务器的压力
+
+### 配置
+
+- 组件缓存
+  keep-alive 标签包裹
+- 路由组件缓存
+  路由：
+  meta:{keepAlive:true}
+  组件：
+  ```vue
+  <keep-alive>
+  <router-view v-if="\$route.meta.keepAlive">
+  </keepalive>
+  ```
+- 使用 keep-alive 会将数据保留在内存中，如果每次进入页面的时候要获取最新的数据，需要 在 activated 生命周期中 重新获取数据，承担原来 created 钩子中获取数据的任务
 
 ## 十四、路由跳转，参数和刷新以后的保存，hash 和 history 的区别
 
-https://blog.csdn.net/bluefish_flying/article/details/81011230
+params 配 name，传递参数不显示在地址栏，路由地址要带上请求参数，不然刷新，传递数值会没有。
+
+query 配 path， 传递参数显示在地址栏，路由地址不需要带参数。
+
+跳转： `this.$router.push()`
+获取： `this.$route.params/query.xx`
+
+hash 模式，地址变化，页面不会重新加载。
+history 模式，用 history.pushState() 完成地址更改，页面不重新加载
+history 需要后台配一个，如果找不到静态资源返回 index.html,前台覆盖所有路由给一个 404 页面
 
 ## 十五、Promise 更深的理解
 
