add vue & axios

--- a/面试考点/1119.md
+++ b/面试考点/1119.md
@@ -74,7 +74,7 @@ if(Boolen(a))
 
 除了 undefined,null,NaN,+0，-0，'', 其他均为 true，如 if({}){} if([]){}
 
-## 七、vue 爷孙组件传值
+## 六、vue 爷孙组件传值
 
 通过 `provide` / `inject`
 
@@ -116,7 +116,7 @@ export default { inject: ["foo"] };
 </script>
 ```
 
-## 八、父组件获取子组件数据和方法
+## 七、父组件获取子组件数据和方法
 
 ```vue
 <div>
@@ -126,7 +126,7 @@ export default { inject: ["foo"] };
 this.$refs.childcomponent.xx
 ```
 
-## 九、父组件监听子组件的生命周期
+## 八、父组件监听子组件的生命周期
 
 ```vue
 <div>
@@ -134,13 +134,11 @@ this.$refs.childcomponent.xx
 </div>
 ```
 
-## 十、 修改对象属性，页面不重新渲染
+## 九、 修改对象属性，页面不重新渲染
 
 - 使用 `this.$set(对象名称, '属性名', '属性值')`
 
 - 使用 `this.$forceUpdate()` 方法可重新渲染页面
-
-## 九、Vue 生命周期，更好的理解、每个周期可以做的事情
 
 ## 十、vue 父子组件渲染顺序
 
@@ -148,13 +146,69 @@ this.$refs.childcomponent.xx
 ->子组件 beforeCreated ->子组件 created ->子组件 beforeMounted
 ->子组件 mounted -> 父组件 mounted
 
-## 十一、更好的 Vue 理解双向绑定
+## 十一、更好的 理解 Vue 双向绑定
+
+通过 Observer 来监听自己的 model 数据变化，通过 Compile 来解析编译模板指令，最终利用 Watcher 搭起 Observer 和 Compile 之间的通信桥梁，达到数据双向绑定。
+
+![vueOWC](./img/vue/vueOWC.png)
+
+- Observer ：数据监听器。监听对象递归遍历，添加 getter 和 setter ，数据变化时通知订阅者。
+- Compile ：解析模板指令。对每个元素节点的指令进行扫描和解析，根据指令模板替换数据，以及绑定相应的更新函数。
+- Watcher ：Observer、Compile 的中间件。订阅并收到每个属性变动的通知，执行指令绑定的相应回调函数，从而更新视图
+
+## 十二、 描述下 vue 从初始化页面--修改数据--刷新页面 UI 的过程？
+
+Vue 遍历 data 中的属性，并用 Object.defineProperty 将它转换成 getter/setter 形式，Vue 的指令编辑器 Compile 元素节点指令解析，初始化视图，订阅 Watcher 更新视图，Watcher 将自己添加到消息订阅器 Dep 中，初始化完成。
+
+当数据发生变化时，触发 Observer 中的 setter 方法，调用 Dep.notify()，Dep 数组开始遍历所有的订阅者，调用 update 方法。Vue 内部通过 diff 算法，patch 相应的更新，完成视图的改变。
+
+## 十三、Vue 生命周期详解
+
+- beforeCreate ：实例初始化。this 指向实例，但是 `data` ，`computed` ，`watch` ，`methods` 上的方法和数据均不能访问
+
+- created ：实例已经创建。完成数据（data、props、computed）的初始化导入依赖项。可访问 `data` ，`computed` ，`watch` ，`methods` 上的方法，**DOM 未挂载**，若要操作，要放到 Vue.nextTick() 中
+
+- beforeMount ：Vue 挂载的根节点已经创建，但是得不到 DOM 元素
+
+- Mounted ：完成挂载 DOM 双向绑定，可以在这发起后端请求。
+
+- beforeUpdate ： 在数据更新之前调用，发生在虚拟 DOM 重新渲染和打补丁之前。
+
+- updated：完成 虚拟 DOM 的重新渲染和补丁( patch )，不要在此函数中操作数据，会陷入死循环
+
+- beforeDestroy ：销毁前。可做一些删除提示，如：您确定删除 xx 吗？
+
+- destroyed ：销毁后，当前组件已被删除，销毁监听事件，组件、事件、子实例也被销毁。
 
 ## 十二、Vue 路由守护钩子函数，拿到实例
 
 ## 十三、Vuex action 参数理解
 
-## 十四、Vue nextTick（） 使用场景
+## 十四、Vue nextTick（）使用场景
+
+- 确保子组件都挂载后执行
+
+mounted 不会保证所有的子组件也都一起被挂载。如果你希望等到整个视图都渲染完毕，可以在 mounted 内部使用 vm.\$nextTick
+
+```js
+mounted: function () {
+  this.$nextTick(function () {
+    // 所有子组件都加载/更新完成
+    // ...
+  })
+}
+```
+
+- 点击按钮显示原本以 v-if = false 隐藏起来元素的宽度（因为本来元素不存在）
+
+```js
+showinput(){
+  this.show = true;
+  this.&nextTick(function(){
+    console.log(this.$ref.myDiv.offsetWidth)
+  })
+}
+```
 
 ## 十五、keep-alive
 
@@ -236,9 +290,55 @@ var p = new Promise((resolve, reject) => {
 
 ## axios 封装，request 拦截器
 
-https://www.jianshu.com/p/a0c67f4e145e
+**应用场景：**
 
-## typeof instanceof
+- 请求拦截器
+
+  每个请求都带上参数，比如 token、时间戳
+
+  ```js
+  axios.interceptors.request.use(
+    (config) => {
+      const token = window.localStorage.getItem("token");
+      token && (config.headers.Authorization = token);
+      return config;
+    },
+    (error) => {
+      return Promise.error(error);
+    }
+  );
+  ```
+
+- 响应拦截器
+
+  对返回的状态进行判断，比如 token 是否过期
+
+  ```js
+  axios.interceptors.response.use(
+    (response) => {
+      if (response.status === 200) {
+        return Promise.resolve(response);
+      } else {
+        return Promise.reject(response);
+      }
+    },
+    (error) => {
+      if (error.response.status) {
+        switch (error.response.status) {
+          // 分情况处理错误
+          case 401:
+            // ...
+            break;
+          default:
+          // ...
+        }
+        return Promise.reject(error.response);
+      }
+    }
+  );
+  ```
+
+## typeof / instanceof
 
 # 计划
 
