--- a/面试考点/1119.md
+++ b/面试考点/1119.md
@@ -340,6 +340,12 @@ var p = new Promise((resolve, reject) => {
 
 ## typeof / instanceof
 
+- typeof 检查原始数据类型 string，number，boolean，undefined，symbol，格式：typeof xx === 'string'
+
+- instanceof 检查引用类型，原理：通过不断的比较 foo.\_\_proto\_\_ 和 Foo.prototype 是否相等，相等返回 true，到 null 返回 false ，格式： a instanceof String
+
+- 判断函数/对象类型 用 Object.prototype.toString.call(xx) 返回 "[object Function]"，即可知道是函数
+
 # 计划
 
 差漏补缺
