--- a/面试考点/1119.md
+++ b/面试考点/1119.md
@@ -1,5 +1,3 @@
-# 11-19 面试差漏补缺
-
 ## 一、暂存死区
 
 暂存性死区是相对于某一个变量来说的，就是在定义该变量之前的区域就是暂存性死区
@@ -182,7 +180,12 @@ Vue 遍历 data 中的属性，并用 Object.defineProperty 将它转换成 gett
 
 ## 十二、Vue 路由守护钩子函数，拿到实例
 
+在 beforeRouteEnter 中 无法拿到 this，需要在 next 回调里 用 next(vm =>{...}) 拿到
+
 ## 十三、Vuex action 参数理解
+
+Action 函数接受一个与 store 实例具有相同方法和属性的 context 对象，因此可以调用 context.commit 提交一个 mutation，或者通过 context.state;context.getters 来获取 state 和 getters。
+
 
 ## 十四、Vue nextTick（）使用场景
 
@@ -346,9 +349,6 @@ var p = new Promise((resolve, reject) => {
 
 - 判断函数/对象类型 用 Object.prototype.toString.call(xx) 返回 "[object Function]"，即可知道是函数
 
-# 计划
-
-差漏补缺
-
-- 根据问题，搜索答案，查看 VueX，VueRouter 文档 （ 五+六 ）
-- 查看项目（查找问题，看累的时候查看项目视频）https://www.bilibili.com/video/BV1Gz411z75G
+- Array.prototype.toString.call(xx)
+  - 如果 xx 是原始数据类型数组（[1,2,3]），则返回 "1,2,3",如果是对象数组，则返回 [Object Object]
+  - 如果 xx 是对象或者函数，则返回 [Object Object] / [Object Function]
