add 1119~1201 interview problem

--- a/面试考点/1125.md
+++ b/面试考点/1125.md
@@ -1,5 +1,11 @@
 ## 伪类和伪元素
 
+**伪元素**
+::before/::after 等 ，仅在 css 层面渲染，不影响 dom
+
+**伪类**
+:hover/:active ，已经存在元素的某个状态
+
 ## Vuex action 的使用
 
 ```js
@@ -66,11 +72,55 @@ export default {
 
 ## Vue-router 动态添加路由，动态生成菜单
 
-## 页面退出，路由数据还在，重新进入，路由二次渲染，创建路由，使用 createRoute
+## 页面退出，路由数据还在，重新进入，路由二次渲染，创建路由，使用 addRoute
 
 ## 存在 Vuex 的数据，刷新会丢失
 
+- 页面刷新前 `beforeunload` ，将 state 存于 sessionStorage/localStorage 中，sessionStorage 比较合适
+
+```js
+window.addEventListener("beforeunload", () => {
+  sessionStorage.setItem("store", JSON.stringify(this.$store.state));
+});
+```
+
+- 在 app.vue 的 created 方法中读取 sessionstorage 中的数据存储在 store 中，此时用 vuex.store 的 replaceState 方法，替换 store 的根状态
+
+```js
+created () {
+  //在页面加载时读取sessionStorage里的状态信息
+  if (sessionStorage.getItem("store") ) {
+    this.$store.replaceState(Object.assign({}, this.$store.state,JSON.parse(sessionStorage.getItem("store"))))
+  }
+}
+```
+
+- 使用 vuex-persistedstate 插件
+
 ## mock.js 测试的使用方法
+
+安装 axios mock json5
+
+**vue.config.js :**
+devServer - before 引入 mock/index.js，在请求前拦截请求信息，并用 mock 数据代替
+
+**mock/index.js :**
+app.get(url,function(){})
+用 json5 将文件（ 形如：`{id: '@id()'}` ）解析成 json，然后，用 `Mock.mock(json)` 生成模拟数据
+
+### 根据运行环境更改 mock
+
+**mock/index.js :**
+
+```js
+if(process.env.MOCK == 'true'){
+  ... 执行
+}
+```
+
+根目录 创建 .env.development 文件，编辑
+
+MOCK = true
 
 ## Promise
 
@@ -117,3 +167,4 @@ test();
 ## 项目下来，如何排期，时间计划表
 
 https://www.kancloud.cn/csnikey/proteam/798657
+
