--- a/面试考点/1119.md
+++ b/面试考点/1119.md
@@ -186,7 +186,6 @@ Vue 遍历 data 中的属性，并用 Object.defineProperty 将它转换成 gett
 
 Action 函数接受一个与 store 实例具有相同方法和属性的 context 对象，因此可以调用 context.commit 提交一个 mutation，或者通过 context.state;context.getters 来获取 state 和 getters。
 
-
 ## 十四、Vue nextTick（）使用场景
 
 - 确保子组件都挂载后执行
@@ -343,11 +342,26 @@ var p = new Promise((resolve, reject) => {
 
 ## typeof / instanceof
 
-- typeof 检查原始数据类型 string，number，boolean，undefined，symbol，格式：typeof xx === 'string'
+- typeof 检查原始数据类型 string，number，boolean，undefined，symbol，格式：typeof xx === 'string'，
 
-- instanceof 检查引用类型，原理：通过不断的比较 foo.\_\_proto\_\_ 和 Foo.prototype 是否相等，相等返回 true，到 null 返回 false ，格式： a instanceof String
+**对于对象，数组，null 都会返回 Object**
 
-- 判断函数/对象类型 用 Object.prototype.toString.call(xx) 返回 "[object Function]"，即可知道是函数
+- instanceof 检查引用类型，原理：通过不断的比较 foo.\_\_proto\_\_ 和 Foo.prototype 是否相等，相等返回 true，到 null 返回 false ，格式： a instanceof String。
+
+**对于 函数、数组 还是会 判断 Object 为 true :**
+
+```js
+let a = [];
+let b = function () {};
+
+console.log(a instanceof Array); // true
+console.log(a instanceof Object); // true
+
+console.log(b instanceof Function); // true
+console.log(b instanceof Object); // true
+```
+
+- 判断数组/对象类型 用 Object.prototype.toString.call(xx) 返回 "[object Array]"，即可知道是数组
 
 - Array.prototype.toString.call(xx)
   - 如果 xx 是原始数据类型数组（[1,2,3]），则返回 "1,2,3",如果是对象数组，则返回 [Object Object]
