--- a/面试考点/1123.md
+++ b/面试考点/1123.md
@@ -5,12 +5,12 @@
 
 ## for..in.. 和 Object.keys() 区别
 
-|           方法            |                 适用范围                  |                              描述                              |
-| :-----------------------: | :---------------------------------------: | :------------------------------------------------------------: |
-|          for..in          |                数组，对象                 |                  获取可枚举的实例和原型属性名                  |
-|       Object.keys()       |                数组，对象                 |                返回可枚举的实例属性名组成的数组                |
+|           方法            |                 适用范围                  |                             描述                             |
+| :-----------------------: | :---------------------------------------: | :----------------------------------------------------------: |
+|          for..in          |                数组，对象                 |               获取可枚举的实例和**原型属性名**               |
+|       Object.keys()       |                数组，对象                 |               返回可枚举的实例属性名组成的数组               |
 | Object.getPropertyNames() |                数组，对象                 | 返回除原型属性以外的所有属性（包括不可枚举的属性）名组成的数组 |
-|          for..of          | 可迭代对象(Array, Map, Set, arguments 等) |                           返回属性值                           |
+|          for..of          | 可迭代对象(Array, Map, Set, arguments 等) |                          返回属性值                          |
 
 ## js 拿到第三个树的第二个子元素
 
