add moudule & learnRoute

--- a/面试考点/1201.md
+++ b/面试考点/1201.md
@@ -126,13 +126,13 @@ http1.1:
 （3）客户端使用公钥加密明文发送给服务端
 （4）服务端使用私解密得到明文
 
-## TCP 慢启动
+## 四、TCP 慢启动
 
 为了防止网络拥塞，TCP 将放弃超出拥塞窗口大小的数据。只有当拥塞串口大小的数据传输完成，这个窗口大小将乘以 2。如此，能够传输的数据以 2 的倍数增长。假设拥塞窗口大小为 14kB，下图展示了某些情况下，推送比不推送的效率没有提升。
 
 ![tcp慢启动](./img/HTTP2/tcp慢启动.jpg)
 
-## 浏览器资源加载的优先级
+## 五、浏览器资源加载的优先级
 
 ### 默认加载顺序
 
@@ -149,6 +149,65 @@ http1.1:
   - 对于添加 `defer / async` 属性标签的脚本的优先级会全部降为 Low 。
   - 对于没有添加该属性的脚本，根据该脚本在文档中的位置是在浏览器展示的第一张图片之前还是之后，分为两类。之前的 ( 标记 `early**` )，它会被定为 High 优先级，之后的 ( 标记 `late**` ) 会被设置为 Medium 优先级。
 
-## preload 和 prefetch
+## 六、preload 和 prefetch
 
-<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+- `preload` 是一个声明式 fetch，可以强制浏览器在不阻塞 document 的 onload 事件（一般 3s）的情况下请求资源。
+
+- `prefetch` 告诉浏览器这个资源将来可能需要，但是什么时间加载这个资源是由浏览器来决定的。
+
+![preload](./img/HTTP2/preload.png)
+
+### 何时使用
+
+- `preload` 告诉浏览器预先请求当**前页需要**的资源，如 `关键的脚本、字体、css`。
+
+- `prefetch` 一般是其他页面可能用到的资源
+
+### 缓存行为
+
+当资源被 preload 或者 prefetch 后，会从网络堆栈传输到 **HTTP 缓存** 并进入渲染器的 **内存缓存** 。
+
+- 如果可以被缓存（ 存在有效的 cache-control 和 max-age ），存入 http 缓存
+- 如果不可以被缓存，存入内存缓存
+
+### 使用事项
+
+**preload:**
+
+- 一定要使用 `as`，否则不产生收益（因为最终要请求两次）
+- 使用字体时，需要设置 `crossorigin`
+
+```html
+<link rel="preload" href="xxx.js" as="script" />
+```
+
+**prefetch:**
+
+- 在 Chrome 中，如果用户导航离开一个页面，而对其他页面的预取请求仍在进行中，这些请求将不会被终止。
+- 无论资源的可缓存性如何，prefetch 请求在未指定的网络堆栈缓存中至少保存 5 分钟。
+
+```html
+<link rel="prefetch" href="https://fonts.googleapis.com/css?family=Roboto" />
+```
+
+### preload 请求头和 preload 标签
+
+许多服务器在遇到 http 头的 preload 链接会触发 http2 服务器推送，为了确保不发起不必要的推送，可以是用 preload 标签，或者在 HTTP 头上加上一个 nopush 属性。
+
+### preload 和 HTTP2-push 对比
+
+原理：都是使用客户端未使用的带宽预先下载之后需要的资源
+
+**不同**
+
+- push 只能给同源或者有推送权的源推送资源。| 可以从任何源里 preload 资源。
+- 如果缓存里已经有要推送的资源，需要客户端发送 `RST_STREAM` 帧给服务器，终止推流 | 如果发现资源已经在 HTTP 缓存里，preload 不会再发送网络请求
+- push 一般推送内联资源（小图片，css，js）| preload 一般预加载 css 文件饮用的字体，外部 css 通过 background-url 加载的图片，其他 css
+
+### 结论
+
+![preload or push](./img/HTTP2/preload%20or%20push.png)
+
+### 整体学习思路
+
+![preload or push](./img/HTTP2/learnRoute.png)
