add promise & http

--- a/面试考点/1203.md
+++ b/面试考点/1203.md
@@ -109,7 +109,60 @@ define(function (require) {
 
 ## async await 和 Promise 的用法以及实现原理
 
+https://zhuanlan.zhihu.com/p/58428287
+
+```js
+//极简的实现
+class Promise {
+    callbacks = [];
+    constructor(fn) {
+        fn(this._resolve.bind(this));
+    }
+    then(onFulfilled) {
+        this.callbacks.push(onFulfilled);
+    }
+    _resolve(value) {
+        this.callbacks.forEach(fn => fn(value));
+    }
+}
+
+//Promise应用
+let p = new Promise(resolve => {
+    setTimeout(() => {
+        console.log('done');
+        resolve('5秒');
+    }, 5000);
+}).then((tip) => {
+    console.log(tip);
+})
+```
+
 ### promise.all 的 polyfill
+
+```js
+Promise.prototype.all = function(promises) {
+  let results = new Array(promises.length);
+  let promiseCount = 0;
+  let promisesLength = promises.length;
+  return new Promise(function(resolve, reject) {
+    for (let val of promises) {
+      Promise.resolve(val).then(function(res) {
+        promiseCount++;
+        // results.push(res);
+        results[promiseCount] = res;
+        // 当所有函数都正确执行了，resolve输出所有返回结果。
+        if (promiseCount === promisesLength) {
+          return resolve(results);
+        }
+      }, function(err) {
+        return reject(err);
+      });
+    }
+  });
+};
+```
+
+
 
 ## 对 ts 的理解
 
@@ -128,11 +181,39 @@ define(function (require) {
 
 ## 移动端遇到过什么坑，移动端页面适配解决方案，以及浏览器中几种长度单位（rem、em、px）的特点和区别（复习）
 
-## React、Vue 之间的区别和实现原理，另外问了下 React 中 Fibber 是什么？
+## React、Vue 之间的区别和实现原理
+
+React 单向数据流 / Vue 响应式数据绑定，对每一个属性建立 Watch
+
+### 1、监听数据变化的实现原理
+
+- Vue：getter/setter 函数劫持
+- React：比较引用（diff）
+
+### 2、数据流
+
+- Vue：v-model 双向数据流
+- React：单向数据流（onChange，setState）
+
+### 3、模板渲染方式
+
+- Vue：组件，js分离，通过指令 v-if / v-bind，import组件以后，需要在 components中声明，this中转
+
+- React：原生js实现模板中的常见语法，render函数支持闭包，直接import组件
+
+### 4、渲染过程
+
+- Vue：跟踪每个组件的依赖关系，不需要重新渲染整个组件树
+
+- React：应用状态改变时，全部子组件会重新渲染（shouldComponentUpadate 优化）
 
 ## JS 的 Event Loop （复习）
 
 ## 三次握手和四次挥手，get post 区别
+
+### 四次握手
+
+因为关闭连接时，收到客户端的FIN报文时，只表示对方不再发送数据，但是还能接收，数据未必完全发送，等数据发送完，再发送FIN报文给对方表示同意关闭。因此 ACK 和 FIN 一般会分开发送。
 
 ## 数组去重 （复习）
 
@@ -162,9 +243,65 @@ function composeFunctions() {
 
 ## 输入 url 到页面显示的步骤
 
-## 页面渲染过程，遇到 script 会怎么样
+- DNS域名解析（域名转化为 ip）
+  - 查找浏览器缓存，如果没有 ↓
+  - 查找系统缓存，如果没有 ↓
+  - 查找路由器缓存，如果没有 ↓
+  - 查找IPS DNS缓存，如果灭有 ↓
+  - 根域名服务器查找
+- 建立TCP连接
+  - 三次握手
+  - 建立连接，可以传输数据
+- 客户端发起http请求
+  - 请求行 ：方法，http协议，url
+  - 请求头：Accept-Encoding：gzip / Connection：keep-alive / Host：网址 / Cookie 等
+  - 请求正文：请求参数
+- 服务端处理，响应请求
+  - 状态码：1xx、2xx、3xx、4xx、5xx
+  - 响应头：Connection:keep-alive / Date 等
+  - 响应正文 ：服务器返回给浏览器的文本信息
+- 浏览器显示页面信息
+  - 解析HTML字符串
+  - 解析到link，重新发送请求获取css
+  - 解析到script，发送请求获取js（此时暂停DOM渲染）
+  - 解析到img，发送请求获取图片
+  - 浏览器根据html，css得到渲染树，绘制到屏幕
+  - 执行js
 
 ## 如何避免 js 阻塞渲染?
+
+### 问题：
+
+当浏览器在HTML页面自上而下解析时，如果在 < head > 中引用一个 js 文件，则会停止 DOM 渲染，加载完成后才会继续渲染，所以会引起阻塞。（因为浏览器不知道 js中执行了哪些脚本，是否会对页面造成影响）
+
+### 解决：
+
+- 推迟加载 ：将css，js 文件放至最后
+
+- 异步加载 ：标签 / 用js动态创建一个script元素添加在document中
+
+  ```js
+  // 标签里 标注 async
+  <script type="text/javascript" src="a.js" async></script>
+  
+  // onload 时异步加载
+  (function() {
+    function async_load(){
+      var s = document.createElement('script');
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = 'js/yibujiaz.js';
+      var x = document.getElementsByTagName('script')[0];
+      x.parentNode.insertBefore(s, x);
+    }
+    if (window.attachEvent)
+      window.attachEvent('onload', async_load);
+    else
+      window.addEventListener('load', async_load, false);
+  })();
+  ```
+
+  
 
 ## img 加载会影响渲染吗
 
