--- a/面试考点/1201.md
+++ b/面试考点/1201.md
@@ -202,7 +202,7 @@ http1.1:
 
 - push 只能给同源或者有推送权的源推送资源。| 可以从任何源里 preload 资源。
 - 如果缓存里已经有要推送的资源，需要客户端发送 `RST_STREAM` 帧给服务器，终止推流 | 如果发现资源已经在 HTTP 缓存里，preload 不会再发送网络请求
-- push 一般推送内联资源（小图片，css，js）| preload 一般预加载 css 文件饮用的字体，外部 css 通过 background-url 加载的图片，其他 css
+- push 一般推送内联资源（小图片，css，js）| preload 一般预加载 css 文件引用的字体，外部 css 通过 background-url 加载的图片，其他 css
 
 ### 结论
 
@@ -211,3 +211,87 @@ http1.1:
 ### 整体学习思路
 
 ![preload or push](./img/HTTP2/learnRoute.png)
+
+## 八大排序-快速排序
+
+- O(nlongn)
+
+（1）挑出一个数，作为基准
+（2）小于基准放左，大于放右（分区操作）
+（3）针对左右两组元素，重复操作（分区长度小于 2，返回）
+
+```js
+function quickSort(arr) {
+  // 长度小于2，返回
+  if (arr.length <= 1) {
+    return arr;
+  }
+  // 取第一个，作为基准
+  let baseValue = arr.shift();
+  let lessArr = [];
+  let moreArr = [];
+  for (let v of arr) {
+    if (v <= baseValue) {
+      lessArr.push(v);
+    } else {
+      moreArr.push(v);
+    }
+  }
+  return quickSort(lessArr).concat(baseValue, quickSort(moreArr));
+}
+```
+
+## 八大排序-冒泡排序
+
+- O(n2)
+
+（1）比较相邻元素，前大后小交换
+（2）第一步结束，最大数到队尾
+（3）重复执行，直到没有数进行比较
+
+```js
+function bubbleSort(arr) {
+  for (let i = 0; i < arr.length; i++) {
+    for (let j = 0; j < arr.length - 1 - i; i++) {
+      // 每次比较后，都有最大数到队尾，不用比较，所有需要 - i
+      if (arr[j] > arr[j + 1]) {
+        [arr[j], arr[j + 1]] = [arr[j + 1], arr[j]];
+      }
+    }
+  }
+  return arr;
+}
+```
+
+## React Hook 和 class 比较
+
+### 区别
+
+- 可以不编写 class 的情况下使用 state 以及其他的 React 特性（比如生命周期）。
+
+### class 优势
+
+- class 组件内部可以定义自己的 state，用来保存组件自己内部的状态；函数式组件不可以，因为函数每次调用都会产生新的临时变量。
+- 
+class 组件有自己的生命周期，可以在对应的生命周期中完成自己的逻辑；比如在 componentDidMount 中发送网络请求，并且该生命周期函数只会执行一次；函数式组件在学习 hooks 之前，如果在函数中发送网络请求，意味着每次重新渲染都会重新发送一次网络请求。
+class 组件可以在状态改变时只重新执行 render 函数以及我们希望重新调用的生命周期函数 componentDidUpdate 等；函数式组件在重新渲染时，整个函数都会被执行，似乎没有什么地方可以只让它们调用一次；
+在 Hook 之前，以上情况通常都用 class。
+Class 组件存在的问题：
+复杂组件变得难以理解：
+最初编写 class 组件时，往往逻辑比较简单，但是业务增多，class 组件就会越来越复杂；
+比如 componentDidMount 中，可能就会有大量逻辑代码，包括网络请求，一些事件的监听（还需要在 componentWillUnmount 中移除）；
+而对于这样的 class 实际上很难拆分，因为这些逻辑往往混在一起，强行拆分反而会造成过度设计，增加代码的复杂度。
+
+难以理解的 class：
+ES6 中 class 相当于 React 的一个障碍；
+在 class 中，我们必须搞清楚 this 的指向到底是谁，所以需要花很多的精力去学习 this；
+虽然掌握 this 是必要，但是处理起来依然很麻烦
+
+组件复用状态很难：
+在之前为了一些状态的复用，我们需要通过高阶组件或 render props；
+像 redux 中 connect 或者 react-route 中的 withRouter，这些高阶组件设计的目的就是为了状态的复用。
+或者类似于 Provider，Consumer 来共享一些状态，但是多次使用 Consumer 时，就会有很多嵌套；
+
+### 优点
+
+Hook 只能在函数组件中使用，不能在类组件，或者函数组件之外的地方使用
