--- a/面试考点/1201.md
+++ b/面试考点/1201.md
@@ -269,28 +269,18 @@ function bubbleSort(arr) {
 
 - 可以不编写 class 的情况下使用 state 以及其他的 React 特性（比如生命周期）。
 
-### class 优势
+### 区别
+
+- componentDidMount 中，可能就会有大量逻辑代码，包括网络请求，一些事件的监听（还需要在 componentWillUnmount 中移除）；
+  而对于这样的 class 实际上很难拆分，因为这些逻辑往往混在一起，强行拆分反而会造成过度设计，增加代码的复杂度。
+- 在 class 中，this 的指向问题可能搞错
+- 组件复用比较繁琐，redux 中 connect，Provider，Consumer 来共享一些状态
 
 - class 组件内部可以定义自己的 state，用来保存组件自己内部的状态；函数式组件不可以，因为函数每次调用都会产生新的临时变量。
-- 
-class 组件有自己的生命周期，可以在对应的生命周期中完成自己的逻辑；比如在 componentDidMount 中发送网络请求，并且该生命周期函数只会执行一次；函数式组件在学习 hooks 之前，如果在函数中发送网络请求，意味着每次重新渲染都会重新发送一次网络请求。
-class 组件可以在状态改变时只重新执行 render 函数以及我们希望重新调用的生命周期函数 componentDidUpdate 等；函数式组件在重新渲染时，整个函数都会被执行，似乎没有什么地方可以只让它们调用一次；
-在 Hook 之前，以上情况通常都用 class。
-Class 组件存在的问题：
-复杂组件变得难以理解：
-最初编写 class 组件时，往往逻辑比较简单，但是业务增多，class 组件就会越来越复杂；
-比如 componentDidMount 中，可能就会有大量逻辑代码，包括网络请求，一些事件的监听（还需要在 componentWillUnmount 中移除）；
-而对于这样的 class 实际上很难拆分，因为这些逻辑往往混在一起，强行拆分反而会造成过度设计，增加代码的复杂度。
 
-难以理解的 class：
-ES6 中 class 相当于 React 的一个障碍；
-在 class 中，我们必须搞清楚 this 的指向到底是谁，所以需要花很多的精力去学习 this；
-虽然掌握 this 是必要，但是处理起来依然很麻烦
-
-组件复用状态很难：
-在之前为了一些状态的复用，我们需要通过高阶组件或 render props；
-像 redux 中 connect 或者 react-route 中的 withRouter，这些高阶组件设计的目的就是为了状态的复用。
-或者类似于 Provider，Consumer 来共享一些状态，但是多次使用 Consumer 时，就会有很多嵌套；
+- class 组件有自己的生命周期，可以在对应的生命周期中完成自己的逻辑；比如在 componentDidMount 中发送网络请求，并且该生命周期函数只会执行一次；函数式组件在学习 hooks 之前，如果在函数中发送网络请求，意味着每次重新渲染都会重新发送一次网络请求。
+  class 组件可以在状态改变时只重新执行 render 函数以及我们希望重新调用的生命周期函数 componentDidUpdate 等；函数式组件在重新渲染时，整个函数都会被执行，似乎没有什么地方可以只让它们调用一次；
+  在 Hook 之前，以上情况通常都用 class。
 
 ### 优点
 
